# extract

./: .gitattributes  .gitignore  AGENTS.md  README.md
.claude/: settings.local.json
WinBridgeApi/: DEPLOY.md  Program.cs  WinBridgeApi.csproj  install-service.ps1  run.bat  validate-deployment.ps1
WinBridgeApi/.publish-article-filter/: appsettings.json
WinBridgeApi/.publish-customer-duplicate-filter/: WinBridgeApi.deps.json
WinBridgeApi/.publish-customer-filter/: appsettings.Development.json
WinBridgeApi/.publish-endpoints/: web.config
WinBridgeApi/Extraction/: ArticleExtraction.cs  (+7 more)
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  ERP_DISCOVERY.md  ETL_MAPPINGS.md  PROCEDURES.md  PROJECT.md  ROADMAP.md  SECURITY.md  SESSIONS.md
etl/: .env.example  DEPLOY_UBUNTU.md  README.md  pyproject.toml  sico-etl-columnas.txt
etl/deploy/systemd/: sico-etl.service  sico-etl.timer
etl/migrations/: 001_etl_control.sql
etl/scripts/: inspect_postgres.sql  purge_expired_staging.sql  validate_ubuntu.sh
etl/src/sico_etl/: config.py  main.py
etl/src/sico_etl.egg-info/: PKG-INFO  SOURCES.txt
etl/src/sico_etl/destination/repositories/: __init__.py
etl/src/sico_etl/domain/: __init__.py  contracts.py
etl/src/sico_etl/observability/: __init__.py  runs.py
etl/src/sico_etl/pipelines/: price_lists.py  warehouses.py
etl/src/sico_etl/source/: winbridge.py
etl/tests/fixtures/: entities.json
etl/tests/integration/: test_postgres_repository.py
etl/tests/unit/: test_contracts.py  test_fixtures.py  test_pipeline.py  test_runs.py  test_safety.py  test_source.py
(+5 files in other folders)
