[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sico-etl"
version = "0.1.5"
description = "Sincronizador de solo lectura desde SICO/WinBridgeApi hacia PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.2,<4",
]

[project.scripts]
sico-etl = "sico_etl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.10"
strict = true
